@@ -3,6 +3,7 @@
 date Version 3.00.31 (Beta 3)
 * Fixed FS#149 — "Double question whether you want to save a project on exit."
 * Fixed FS#148 — "Different generated C++ and XRC file names for unnamed projects."
+* Fixed FS#154 — "Crash when adding a sizer."
 
 03-05-2007 Version 3.00.30 (Beta 3)
 ^ Implemented FS#130 — "Support for searching through XRC or C++ code."
